deploys/metabase/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
  name: metabase
  namespace: metabase
spec:
  gateways:
    - default/default-gateway
  hosts:
    - "metabase.localhost"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: local-metabase.metabase.svc.cluster.local
            port:
              number: 80
